FIND_PACKAGE(SWIG REQUIRED)
INCLUDE(${SWIG_USE_FILE})
FIND_PACKAGE(PythonLibs)
INCLUDE_DIRECTORIES(${PYTHON_INCLUDE_PATH})
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})
SET(CMAKE_SWIG_FLAGS "")

SET_SOURCE_FILES_PROPERTIES(atexplorer.i PROPERTIES CPLUSPLUS ON)
SET_SOURCE_FILES_PROPERTIES(atexplorer.i PROPERTIES SWIG_FLAGS "-threads")
#SET_SOURCE_FILES_PROPERTIES(atexplorer.i PROPERTIES SWIG_FLAGS "-includeall")
INCLUDE_DIRECTORIES(
.
${ATAPI_ROOT}
${ATAPI_ROOT}/source
${ATAPI_ROOT}/source/core
)

LINK_DIRECTORIES(${LIBRARY_OUTPUT_PATH} )

SWIG_ADD_MODULE(atexplorer python atexplorer.i ${ATAPI_ROOT}/source/core/atATObject.cpp)
SWIG_LINK_LIBRARIES (atexplorer 
    ${PYTHON_LIBRARIES}
)


# INSTALL PYTHON BINDINGS
# Get the python site packages directory by invoking python
execute_process(COMMAND python -c "import site; print(site.getsitepackages()[0])" OUTPUT_VARIABLE PYTHON_SITE_PACKAGES OUTPUT_STRIP_TRAILING_WHITESPACE)
message("PYTHON_SITE_PACKAGES = ${PYTHON_SITE_PACKAGES}")
install(TARGETS _atexplorer DESTINATION ${PYTHON_SITE_PACKAGES})
install(FILES ${CMAKE_CURRENT_BINARY_DIR}/atexplorer.py DESTINATION ${PYTHON_SITE_PACKAGES})


